--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:16:49.856445Z",
-     "start_time": "2023-07-09T21:16:49.852443Z"
+     "end_time": "2023-07-15T23:36:00.042890Z",
+     "start_time": "2023-07-15T23:36:00.037079Z"
     }
    },
    "outputs": [],
@@ -34,14 +34,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:16:49.865061Z",
-     "start_time": "2023-07-09T21:16:49.858338Z"
+     "end_time": "2023-07-15T23:36:00.081536Z",
+     "start_time": "2023-07-15T23:36:00.045867Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "os.chdir(\"../\")"
@@ -49,14 +49,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:17:12.827932Z",
-     "start_time": "2023-07-09T21:17:12.821217Z"
+     "end_time": "2023-07-15T23:36:55.290839Z",
+     "start_time": "2023-07-15T23:36:55.286575Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "from dataclasses import dataclass\n",
@@ -72,14 +72,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:46:59.336008Z",
-     "start_time": "2023-07-09T21:46:59.329043Z"
+     "end_time": "2023-07-15T23:36:20.670757Z",
+     "start_time": "2023-07-15T23:36:20.665041Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "from src.cnnClassifier.constant import *\n",
@@ -88,14 +88,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:24:27.643870Z",
-     "start_time": "2023-07-09T21:24:26.195844Z"
+     "end_time": "2023-07-15T23:36:23.538353Z",
+     "start_time": "2023-07-15T23:36:23.355310Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "class ConfigurationManager:\n",
@@ -126,14 +126,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T22:09:34.759060Z",
-     "start_time": "2023-07-09T22:09:34.748755Z"
+     "end_time": "2023-07-15T23:36:25.842385Z",
+     "start_time": "2023-07-15T23:36:25.838453Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "import os\n",
@@ -145,14 +145,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:52:02.861417Z",
-     "start_time": "2023-07-09T21:52:02.856151Z"
+     "end_time": "2023-07-15T23:36:27.999057Z",
+     "start_time": "2023-07-15T23:36:27.994226Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "class DataIngestion:\n",
@@ -178,61 +178,50 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T21:59:13.913062Z",
-     "start_time": "2023-07-09T21:59:13.906941Z"
+     "end_time": "2023-07-15T23:36:30.788795Z",
+     "start_time": "2023-07-15T23:36:30.785351Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-07-09 23:10:02,261: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
-      "[2023-07-09 23:10:02,263: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-07-09 23:10:02,264: INFO: common: created directory at: artifacts]\n",
-      "[2023-07-09 23:10:02,264: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-07-09 23:10:02,698: INFO: 324913937: artifacts/data_ingestion/data.zip download! with following info: \n",
-      "Content-Type: text/html; charset=utf-8\n",
-      "Cache-Control: no-cache, no-store, max-age=0, must-revalidate\n",
-      "Pragma: no-cache\n",
-      "Expires: Mon, 01 Jan 1990 00:00:00 GMT\n",
-      "Date: Sun, 09 Jul 2023 22:10:02 GMT\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "Content-Security-Policy: script-src 'report-sample' 'nonce-piYz8ihPQF_Wbmx6GUTebA' 'unsafe-inline';object-src 'none';base-uri 'self';report-uri /_/DriveUntrustedContentHttp/cspreport;worker-src 'self'\n",
-      "Content-Security-Policy: require-trusted-types-for 'script';report-uri /_/DriveUntrustedContentHttp/cspreport\n",
-      "Permissions-Policy: ch-ua-arch=*, ch-ua-bitness=*, ch-ua-full-version=*, ch-ua-full-version-list=*, ch-ua-model=*, ch-ua-wow64=*, ch-ua-form-factor=*, ch-ua-platform=*, ch-ua-platform-version=*\n",
-      "Accept-CH: Sec-CH-UA-Arch, Sec-CH-UA-Bitness, Sec-CH-UA-Full-Version, Sec-CH-UA-Full-Version-List, Sec-CH-UA-Model, Sec-CH-UA-WoW64, Sec-CH-UA-Form-Factor, Sec-CH-UA-Platform, Sec-CH-UA-Platform-Version\n",
-      "Cross-Origin-Opener-Policy: same-origin\n",
-      "Server: ESF\n",
-      "X-XSS-Protection: 0\n",
-      "X-Frame-Options: SAMEORIGIN\n",
-      "X-Content-Type-Options: nosniff\n",
-      "Alt-Svc: h3=\":443\"; ma=2592000,h3-29=\":443\"; ma=2592000\n",
-      "Accept-Ranges: none\n",
-      "Vary: Accept-Encoding\n",
+      "[2023-07-16 00:36:59,119: INFO: common: yaml file: config/config.yaml loaded successfully]\n",
+      "[2023-07-16 00:36:59,121: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-07-16 00:36:59,122: INFO: common: created directory at: artifacts]\n",
+      "[2023-07-16 00:36:59,123: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-07-16 00:37:03,340: INFO: 324913937: artifacts/data_ingestion/data.zip download! with following info: \n",
       "Connection: close\n",
-      "Transfer-Encoding: chunked\n",
+      "Content-Length: 23046483\n",
+      "Cache-Control: max-age=300\n",
+      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
+      "Content-Type: application/zip\n",
+      "ETag: \"7cb504e94582cbba0b35ee3f19e40c505650d352be2adc892683f9677eaa3ad7\"\n",
+      "Strict-Transport-Security: max-age=31536000\n",
+      "X-Content-Type-Options: nosniff\n",
+      "X-Frame-Options: deny\n",
+      "X-XSS-Protection: 1; mode=block\n",
+      "X-GitHub-Request-Id: CF92:1322E:28EC6F8:2A8D0A9:64B32D9B\n",
+      "Accept-Ranges: bytes\n",
+      "Date: Sat, 15 Jul 2023 23:37:00 GMT\n",
+      "Via: 1.1 varnish\n",
+      "X-Served-By: cache-lhr7352-LHR\n",
+      "X-Cache: MISS\n",
+      "X-Cache-Hits: 0\n",
+      "X-Timer: S1689464220.531368,VS0,VE951\n",
+      "Vary: Authorization,Accept-Encoding,Origin\n",
+      "Access-Control-Allow-Origin: *\n",
+      "Cross-Origin-Resource-Policy: cross-origin\n",
+      "X-Fastly-Request-ID: ba71a6aa4dfc0933391ae450dea25481cc506e53\n",
+      "Expires: Sat, 15 Jul 2023 23:42:00 GMT\n",
+      "Source-Age: 1\n",
       "\n",
       "]\n"
-     ]
-    },
-    {
-     "ename": "BadZipFile",
-     "evalue": "File is not a zip file",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mBadZipFile\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[23], line 8\u001B[0m\n\u001B[1;32m      6\u001B[0m     data_ingestion\u001B[38;5;241m.\u001B[39mextract_zip_file()\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m----> 8\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\n",
-      "Cell \u001B[0;32mIn[23], line 6\u001B[0m\n\u001B[1;32m      4\u001B[0m     data_ingestion \u001B[38;5;241m=\u001B[39m DataIngestion(config\u001B[38;5;241m=\u001B[39mdata_ingestion_config)\n\u001B[1;32m      5\u001B[0m     data_ingestion\u001B[38;5;241m.\u001B[39mdownload_file()\n\u001B[0;32m----> 6\u001B[0m     \u001B[43mdata_ingestion\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mextract_zip_file\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mException\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m e\n",
-      "Cell \u001B[0;32mIn[11], line 18\u001B[0m, in \u001B[0;36mDataIngestion.extract_zip_file\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m     16\u001B[0m unzip_path \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mconfig\u001B[38;5;241m.\u001B[39munzip_dir\n\u001B[1;32m     17\u001B[0m os\u001B[38;5;241m.\u001B[39mmakedirs(unzip_path, exist_ok\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m---> 18\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[43mzipfile\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mZipFile\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mconfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mlocal_data_file\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m zip_ref:\n\u001B[1;32m     19\u001B[0m     zip_ref\u001B[38;5;241m.\u001B[39mextractall(unzip_path)\n",
-      "File \u001B[0;32m~/miniconda3/lib/python3.10/zipfile.py:1267\u001B[0m, in \u001B[0;36mZipFile.__init__\u001B[0;34m(self, file, mode, compression, allowZip64, compresslevel, strict_timestamps)\u001B[0m\n\u001B[1;32m   1265\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m   1266\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m mode \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m'\u001B[39m:\n\u001B[0;32m-> 1267\u001B[0m         \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_RealGetContents\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m   1268\u001B[0m     \u001B[38;5;28;01melif\u001B[39;00m mode \u001B[38;5;129;01min\u001B[39;00m (\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mw\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mx\u001B[39m\u001B[38;5;124m'\u001B[39m):\n\u001B[1;32m   1269\u001B[0m         \u001B[38;5;66;03m# set the modified flag so central directory gets written\u001B[39;00m\n\u001B[1;32m   1270\u001B[0m         \u001B[38;5;66;03m# even if no files are added to the archive\u001B[39;00m\n\u001B[1;32m   1271\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_didModify \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n",
-      "File \u001B[0;32m~/miniconda3/lib/python3.10/zipfile.py:1334\u001B[0m, in \u001B[0;36mZipFile._RealGetContents\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m   1332\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m BadZipFile(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFile is not a zip file\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m   1333\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m endrec:\n\u001B[0;32m-> 1334\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m BadZipFile(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mFile is not a zip file\u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[1;32m   1335\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdebug \u001B[38;5;241m>\u001B[39m \u001B[38;5;241m1\u001B[39m:\n\u001B[1;32m   1336\u001B[0m     \u001B[38;5;28mprint\u001B[39m(endrec)\n",
-      "\u001B[0;31mBadZipFile\u001B[0m: File is not a zip file"
      ]
     }
    ],
@@ -249,18 +238,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-07-09T22:10:02.930979Z",
-     "start_time": "2023-07-09T22:10:02.260871Z"
+     "end_time": "2023-07-15T23:37:03.600887Z",
+     "start_time": "2023-07-15T23:36:59.121314Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-12T22:02:10.550473Z",
+     "start_time": "2023-07-12T22:02:10.546810Z"
+    }
    }
   }
  ],
